--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "entrega-07-sass2",
   "version": "1.0.0",
-  "description": "",
+  "description": "*ReadMe entrega desafío SEO - Felipe Uribe Herrera*",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
