Proyecto final terminado

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entrega-07-sass2",
+  "name": "np",
   "version": "1.0.0",
   "description": "*ReadMe entrega desafío SEO - Felipe Uribe Herrera*",
   "main": "index.js",
